--- a/shab/web/templates/index.html
+++ b/shab/web/templates/index.html
@@ -352,7 +352,7 @@
       <div class="card-title">
         <div class="row">
           <div class="col-12">
-            <img src="/media/{{post.PostImage}}" class="img-fluid" style="border-radius: 5%";>
+            <img src="/media/{{post.PostImage}}" class="img-fluid" style="border-radius: 5%;">
           </div>
         </div>
         <div class="row" style="padding-top : 5%;">
