--- a/shab/web/templates/post2.html
+++ b/shab/web/templates/post2.html
@@ -115,6 +115,37 @@
       </div>
       <div class="col-8">
         <div class="card mycard">
+          <div class="card-header">
+                 {% if post.Category == 'LM' %}
+                لذت متن
+                {% endif %}
+                {% if post.Category == 'article' %}
+سرمقاله
+                {% endif %}
+                {% if post.Category == 'LN' %}
+               لذت نقد
+                {% endif %}
+                {% if post.Category == 'PZ' %}
+               پژوهش
+                {% endif %}
+                {% if post.Category == 'GG' %}
+                گفتگو
+                {% endif %}
+                {% if post.Category == 'LK' %}
+               لذت کشف
+                {% endif %}
+                {% if post.Category == 'RS' %}
+                به روایت شما
+                {% endif %}
+
+                                {% if post.Category == 'chel' %}
+چهل سالگی
+                {% endif %}
+
+                                {% if post.Category == 'PW' %}
+               پادساعت
+                {% endif %}
+            </div>
           <div class="card-body">
             <div class="card-title">
               <div class="row">
@@ -152,27 +183,30 @@
 
               </div>
           </div>
-
-          {% if relatedposts %}
-          <div class="card-footer text-center">
+ {% if relatedposts %}
+ <div class="card-footer text-center">
             <div class=""> <h5> مطالب مرتبط </h5> </div>
-            <div class="row">
+                   <div class="row">
+
               {% for relpost in relatedposts %}
               <div class="col-4">
                 <div class="card mycard zoom" onclick="location.href='/post/{{relpost.related.id}}';">
+                  <div class="card-header">
+                        <div class="card-text"> <h8>{{relpost.related.Title}} </h8> </div>
+                    </div>
                   <div class="card-body">
-
-                     <div class="card-text text-center"> <h8>{{relpost.related.Title}} </h8> </div>
-
+                      <div class="row">
+                          <div class="col-6"> <img class="img-fluid" src="/media/{{post.PostImage}}" style="border-radius: 5%;" ></div>
+                          <div class="col-6">{{relpost.related.SubTitle}}</div>
+                      </div>
                   </div>
                 </div>
               </div>
               {% endfor %}
-
+                   </div>
 
             </div>
-          </div>
-          {% endif %}
+        {% endif %}
         </div>
       </div>
       <div class="col-2">
