--- a/shab/web/templates/post2.html
+++ b/shab/web/templates/post2.html
@@ -24,6 +24,7 @@
 
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
 
   <link rel="stylesheet" href="{% static 'css/style.css' %}" >
 <script type="text/javascript" src="{% static 'js/js.js' %}"></script>
@@ -86,26 +87,44 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">لذت متن <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">لذت نقد</a>
-        </li>
 
-        <li class="nav-item col-2 brand">
+
+        <li class="nav-item col-2 brand active">
         <a href="{% url 'index' %}"> <img src="{% static 'img/brand.png' %}" class="img-fluid"> </a>
         </li>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item"> <a class="nav-link" href="#">چهل سالگی</a></li>
-        <li class="nav-item"> <a class="nav-link" href="#">پادساعت</a></li>
-        <li class="nav-item"> <a class="nav-link" href="#"><i class="fas fa-search"></i></a></li>
-      </ul>
+<li class="nav-item"> <button type="button" class="btn btn-primary-outline" style=" background-color: transparent;
+  " data-toggle="modal" data-target="#searchModal">
+  <i class="fa fa-search" aria-hidden="true" style="color: white"></i>
+</button></li>      </ul>
 
     </div>
   </nav>
 
+
+
+        <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <form method="post" action="/search/">
+      <div class="modal-body">
+
+            <input name="search" class="form-control form-control-lg" type="text" placeholder="جستجو...">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">جستجو</button>
+      </div>
+        </form>
+    </div>
+  </div>
+</div>
 
 
 
@@ -159,8 +178,16 @@
                     </div>
                     <div class="col-2 mid">
                   <span class="icon"><i id="likenumber" class=" heart {{classattr}} fa-heart ">{{likesnumber}}</i></span>
-                      <span class="icon"><i class=" share fas fa-share-square gray"></i></span>
-                    </div>
+<span class="icon">
+
+                        <button type="button" class="btn btn-primary-outline" style=" background-color: transparent;
+  " data-toggle="modal" data-target="#shareModal">
+  <i class=" share fas fa-share-square gray"></i>
+</button>
+
+
+
+                    </span>                    </div>
                   </div>
                   <div class="row">
                    <div class="col-12">
@@ -213,6 +240,64 @@
       </div>
     </div>
   </div>
+
+
+
+
+<div class="modal fade" id="shareModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content" style="background-color:transparent; border:none;">
+
+            <div class="row">
+                <div class="col-1">
+                    <button class="button social twitter" style="display: inline-block"  data-sharer="twitter" data-title="{{post.Title}} {{ request.META.HTTP_HOST }}{{ request.path }}" data-hashtags="{% for tag in tags %} {{tag}}, {% endfor %}" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                        <i class="fab fa-twitter fa-lg" aria-hidden="true" style="color: white"></i>
+                    </button>
+                </div>
+                <div class="col-1">
+
+                    <button class="button  social telegram" style="display: inline-block" data-sharer="telegram" data-title="{{post.Title}}" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                        <i class="fab fa-telegram-plane fa-lg" aria-hidden="true" style="color: white"></i>
+                    </button>
+                </div>
+
+
+                <div class="col-1">
+
+                    <button class="button social facebook" data-sharer="facebook"  data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                        <i class="fab fa-facebook-f fa-lg" aria-hidden="true" style="color: white"></i>
+                    </button>
+                </div>
+
+
+                  <div class="col-1">
+
+                <button class="button social linkedin" data-sharer="linkedin" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                        <i class="fab fa-linkedin fa-lg" aria-hidden="true" style="color: white"></i>
+                    </button>
+                </div>
+
+
+
+                <div class="col-1">
+
+
+                    <button class="button social email" data-sharer="email" data-title="{{post.Title}}  -  {{post.Text|striptags}}" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}" data-subject="{{post.Title}}">
+                        <i class="far fa-envelope fa-lg" aria-hidden="true" style="color: white"></i>
+                    </button>
+                </div>
+
+
+
+
+            </div>
+
+
+        </div>
+    </div>
+</div>
+
+
 
 
 
