--- a/shab/web/templates/post.html
+++ b/shab/web/templates/post.html
@@ -239,7 +239,7 @@
 
             <div class="row">
                 <div class="col-1">
-                    <button class="button social twitter" style="display: inline-block"  data-sharer="twitter" data-title="{{post.Title}} {{ request.META.HTTP_HOST }}{{ request.path }}" data-hashtags="{% for tag in tags %} {{tag}}, {% endfor %}" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                    <button class="button social twitter" style="display: inline-block"  data-sharer="twitter" data-title="{{post.Title}}   -    {{ request.META.HTTP_HOST }}{{ request.path }}" data-hashtags="{% for tag in tags %} {{tag}}, {% endfor %}" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
                         <i class="fab fa-twitter fa-lg" aria-hidden="true" style="color: white"></i>
                     </button>
                 </div>
