--- a/shab/web/templates/app/tables_dynamic.html
+++ b/shab/web/templates/app/tables_dynamic.html
@@ -3,52 +3,121 @@
 {% block title %} Table Dynamic {% endblock title %}
 
 {% block stylesheets %}
-  {{ block.super }}
-  <link href="/static/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
-  <link href="/static/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
-  <link href="/static/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet">
-  <link href="/static/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet">
-  <link href="/static/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet">
+{{ block.super }}
+<link href="/static/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+<link href="/static/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
+<link href="/static/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet">
+<link href="/static/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet">
+<link href="/static/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet">
 {% endblock stylesheets %}
 
 {% block content %}
-  <div class="right_col" role="main">
-    <div class="">
-      <div class="page-title">
-        <div class="title_left">
-          <h3>پست ها  <small></small></h3>
-        </div>
+<div class="right_col" role="main">
+  <div class="">
+    <div class="page-title">
+      <div class="title_left">
+        <h3>پست ها  <small></small></h3>
+      </div>
 
-        <div class="title_right">
-          <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search for...">
-              <span class="input-group-btn">
+      <div class="title_right">
+        <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for...">
+            <span class="input-group-btn">
                 <button class="btn btn-default" type="button">Go!</button>
               </span>
-            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="x_panel">
+          <div class="x_title">
+            <h2>پست ها<small> </small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+              <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">Settings 1</a>
+                  </li>
+                  <li><a href="#">Settings 2</a>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="close-link"><i class="fa fa-close"></i></a>
+              </li>
+            </ul>
+            <div class="clearfix"></div>
+          </div>
+          <div class="x_content">
+            <p class="text-muted font-13 m-b-30">
+            </p>
+            {% if message %}
+            <div class="alert alert-success" role="alert">{{message}}</div>
+            {% endif %}
+            <table id="datatable" class="table table-striped table-bordered">
+              <thead>
+              <tr>
+                <th>عنوان</th>
+                <th>تاریخ ایجاد</th>
+                <th>نوع پست</th>
+                <th>نوع نمایش</th>
+                <th>ایندکس</th>
+                <th></th>
+                <th>عملیات</th>
+              </tr>
+              </thead>
+
+
+              <tbody>
+
+              {% for post in posts %}
+              <tr>
+                <td> {{post.Title}} </td>
+                <td> {{post.Date}} </td>
+                <td> {{post.Category}} </td>
+                <td> {{post.Type}} </td>
+                <td>
+                  <form class="form-inline" method="post" action="/newindex/">
+                    <div class="form-group mx-sm-3 mb-2">
+                      <label for="index" class="sr-only">{{post.Index}}</label>
+                      <input name="index" type="text" class="form-control" id="index" value="{{post.Index}}">
+                      <input name="postid" type="hidden"  value="{{post.id}}">
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2"><i class="fa fa-check"></i> </button>
+                  </form>
+                </td>
+                <td> </td>
+                <td> <a href="/related/{{post.id}}"> <i class="fa fa-link"></i> </a>   <a href="/editpost/{{post.id}}"> <i class="fa fa-edit"></i> </a> <a href="/delpost/{{post.id}}"> <i class="fa fa-remove"></i> </a> </td>
+              </tr>
+              {% endfor %}
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
 
-      <div class="clearfix"></div>
 
-      <div class="row">
+
+
+    </div>
+
+
+
+
+    <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="x_panel">
             <div class="x_title">
-              <h2>پست ها<small> </small></h2>
-              <ul class="nav navbar-right panel_toolbox">
-                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Settings 1</a>
-                    </li>
-                    <li><a href="#">Settings 2</a>
-                    </li>
-                  </ul>
+              <h2>تنظیمات نمایش <small></small></h2>
+               <ul class="nav navbar-right panel_toolbox">
+               <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                 </li>
                 <li><a class="close-link"><i class="fa fa-close"></i></a>
                 </li>
@@ -56,68 +125,51 @@
               <div class="clearfix"></div>
             </div>
             <div class="x_content">
-              <p class="text-muted font-13 m-b-30">
-              </p>
-              {% if message %}
-            <div class="alert alert-success" role="alert">{{message}}</div>
-            {% endif %}
-              <table id="datatable" class="table table-striped table-bordered">
-                <thead>
-                  <tr>
-                    <th>عنوان</th>
-                    <th>تاریخ ایجاد</th>
-                    <th>نوع پست</th>
-                    <th>نوع نمایش</th>
-                    <th></th>
-                    <th>عملیات</th>
-                  </tr>
-                </thead>
-
-
-                <tbody>
-
-                  {% for post in posts %}
-                  <tr>
-                  <td> {{post.Title}} </td>
-                  <td> {{post.Date}} </td>
-                  <td> {{post.Category}} </td>
-                  <td> {{post.Type}} </td>
-                <td> </td>
-                <td> <a href="/related/{{post.id}}"> <i class="fa fa-link"></i> </a>   <a href="/editpost/{{post.id}}"> <i class="fa fa-edit"></i> </a> <a href="/delpost/{{post.id}}"> <i class="fa fa-remove"></i> </a> </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-              </table>
+              <br />
+              <form id="demo-form3" method="post" action="/config/"  data-parsley-validate class="form-horizontal form-label-left">
+              <div class="form-group">
+                <div class="form-group">
+                  <label class="control-label col-md-3 col-sm-3 col-xs-12">پست ها</label>
+                  <div class="col-md-6 col-sm-6 col-xs-6">
+                    <select name="showOrder" class="select2_single form-control" tabindex="-1">
+                      <option value="Date" {% if config.ShowOrder == 'Date' %} selected {% endif %} > بر اساس تاریخ </option>
+                      <option value="Index" {% if config.ShowOrder == 'Index' %} selected {% endif %} > بر اساس ایندکس </option>
+                    </select>
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-6">
+                  <button class="btn btn-info" type="submit"> تغییر ترتیب نمایش</button>
+                  </div>
+                </div>
+              </div>
+              </form>
             </div>
           </div>
         </div>
-
-
-
-
       </div>
-    </div>
 
 
   </div>
+
+
+</div>
 {% endblock content %}
 
 {% block javascripts %}
-  {{ block.super }}
-  <!-- Datatables -->
-  <script src="/static/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
-  <script src="/static/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
-  <script src="/static/vendors/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-  <script src="/static/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
-  <script src="/static/vendors/datatables.net-buttons/js/buttons.flash.min.js"></script>
-  <script src="/static/vendors/datatables.net-buttons/js/buttons.html5.min.js"></script>
-  <script src="/static/vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
-  <script src="/static/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js"></script>
-  <script src="/static/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
-  <script src="/static/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
-  <script src="/static/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
-  <script src="/static/vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
-  <script src="/static/vendors/jszip/dist/jszip.min.js"></script>
-  <script src="/static/vendors/pdfmake/build/pdfmake.min.js"></script>
-  <script src="/static/vendors/pdfmake/build/vfs_fonts.js"></script>
+{{ block.super }}
+<!-- Datatables -->
+<script src="/static/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+<script src="/static/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+<script src="/static/vendors/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+<script src="/static/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
+<script src="/static/vendors/datatables.net-buttons/js/buttons.flash.min.js"></script>
+<script src="/static/vendors/datatables.net-buttons/js/buttons.html5.min.js"></script>
+<script src="/static/vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
+<script src="/static/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js"></script>
+<script src="/static/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
+<script src="/static/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+<script src="/static/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
+<script src="/static/vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
+<script src="/static/vendors/jszip/dist/jszip.min.js"></script>
+<script src="/static/vendors/pdfmake/build/pdfmake.min.js"></script>
+<script src="/static/vendors/pdfmake/build/vfs_fonts.js"></script>
 {% endblock javascripts %}
