search button fixed!

--- a/shab/web/templates/post.html
+++ b/shab/web/templates/post.html
@@ -121,7 +121,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">جستجو</button>
+                    <button type="submit" class="btn btn-primary">جستجو</button>
                 </div>
             </form>
         </div>
