--- a/shab/web/templates/post23.html
+++ b/shab/web/templates/post23.html
@@ -119,7 +119,7 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">جستجو</button>
+        <button type="submit" class="btn btn-primary">جستجو</button>
       </div>
         </form>
     </div>
