logo and aparat frame

--- a/shab/web/templates/post23.html
+++ b/shab/web/templates/post23.html
@@ -90,7 +90,7 @@
 
 
       <li class="nav-item col-2 brand">
-        <a href="{% url 'index' %}"> <img src="{% static 'img/brand.png' %}" class="img-fluid"> </a>
+        <a href="{% url 'index' %}"> <img src="{% static 'img/logo.png' %}" class="img-fluid"> </a>
       </li>
     </ul>
     <ul class="navbar-nav">
