--- a/shab/web/static/css/style.css
+++ b/shab/web/static/css/style.css
@@ -51,7 +51,6 @@ body  {
 }
 
 .intro{
-  background-color: rgb(242,245,242);
   color: rgba(0, 0, 0, 0.749);
 border-radius: 10px;
 padding: 2%;
@@ -96,6 +95,8 @@ line-height: 1.8 !important;
 
 .divintro{
   margin-bottom: 2rem;
+  background-color: rgb(242,245,242);
+  border-radius: 3%;
 }
 
 .card-text{
