--- a/shab/web/templates/index.html
+++ b/shab/web/templates/index.html
@@ -131,7 +131,7 @@
               <div class="col-8 mid"> <h6>{{b1.Title}}  </h6></div>
             </div>
             <div class="row">
-              <div class="divintro mid"><span class="intro"> {{b1.SubTitle|safe}}</span></div>
+              <div class="divintro mid divint"><span class="intro"> {{b1.SubTitle|safe}}</span></div>
             </div>
           </div>
           <div class="col-6 mid">
@@ -355,7 +355,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="divintro"><span class="intro">{{post.SubTitle}}</span></div>
+        <div class="divintro divint"><span class="intro">{{post.SubTitle}}</span></div>
       </div>
       <div class="row"> <div class="divintro"><p class="card-text">{{post.Text|safe|mystrip|safe|slice:":300"}}</p></div>
       </div>
