--- a/shab/web/templates/post.html
+++ b/shab/web/templates/post.html
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="divintro"><span class="intro">{{post.SubTitle}}</span></div>
+                <div class="divintro divint"><span class="intro">{{post.SubTitle}}</span></div>
                 <div class="divintro" style=" margin: 5%;"><p class="card-text">{{post.Text|safe}}</p></div>
                 <div class="row">
                     {% for tag in tags %}
