--- a/shab/web/templates/post.html
+++ b/shab/web/templates/post.html
@@ -349,7 +349,7 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = '{{ request.META.HTTP_HOST }}{{ request.path }}';  // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = 'http://{{ request.META.HTTP_HOST }}{{ request.path }}';  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = '/post.id/'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
