--- a/shab/web/templates/post2.html
+++ b/shab/web/templates/post2.html
@@ -250,13 +250,13 @@
 
             <div class="row">
                 <div class="col-1">
-                    <button class="button social twitter" style="display: inline-block"  data-sharer="twitter" data-title="{{post.Title}} {{ request.META.HTTP_HOST }}{{ request.path }}" data-hashtags="{% for tag in tags %} {{tag}}, {% endfor %}" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                    <button class="button social twitter" style="display: inline-block"  data-sharer="twitter" data-title="{{post.Title}} http://{{ request.META.HTTP_HOST }}{{ request.path }}" data-hashtags="{% for tag in tags %} {{tag}}, {% endfor %}" data-url="http://{{ request.META.HTTP_HOST }}{{ request.path }}">
                         <i class="fab fa-twitter fa-lg" aria-hidden="true" style="color: white"></i>
                     </button>
                 </div>
                 <div class="col-1">
 
-                    <a href="https://telegram.me/share/url?url={{ request.META.HTTP_HOST }}{{ request.path }}&text={{post.Title}}" target="_blank">
+                    <a href="https://telegram.me/share/url?url=http://{{ request.META.HTTP_HOST }}{{ request.path }}&text={{post.Title}}" target="_blank">
                     <button class="button  social telegram" style="display: inline-block" >
                         <i class="fab fa-telegram-plane fa-lg" aria-hidden="true" style="color: white"></i>
                     </button>
@@ -266,7 +266,7 @@
 
                 <div class="col-1">
 
-                    <button class="button social facebook" data-sharer="facebook"  data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                    <button class="button social facebook" data-sharer="facebook"  data-url="http://{{ request.META.HTTP_HOST }}{{ request.path }}">
                         <i class="fab fa-facebook-f fa-lg" aria-hidden="true" style="color: white"></i>
                     </button>
                 </div>
@@ -274,7 +274,7 @@
 
                   <div class="col-1">
 
-                <button class="button social linkedin" data-sharer="linkedin" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}">
+                <button class="button social linkedin" data-sharer="linkedin" data-url="http://{{ request.META.HTTP_HOST }}{{ request.path }}">
                         <i class="fab fa-linkedin fa-lg" aria-hidden="true" style="color: white"></i>
                     </button>
                 </div>
@@ -284,7 +284,7 @@
                 <div class="col-1">
 
 
-                    <button class="button social email" data-sharer="email" data-title="{{post.Title}}  -  {{post.Text|striptags}}" data-url="{{ request.META.HTTP_HOST }}{{ request.path }}" data-subject="{{post.Title}}">
+                    <button class="button social email" data-sharer="email" data-title="{{post.Title}}  -  {{post.Text|striptags}}" data-url="http://{{ request.META.HTTP_HOST }}{{ request.path }}" data-subject="{{post.Title}}">
                         <i class="far fa-envelope fa-lg" aria-hidden="true" style="color: white"></i>
                     </button>
                 </div>
