--- a/shab/web/templates/index.html
+++ b/shab/web/templates/index.html
@@ -89,7 +89,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b1.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b1.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":130"|safe}}</p></div>
+          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":130"|safe}} . . . </p></p></div>
         </div>
 
       </div>
@@ -109,7 +109,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b1.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b1.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":250"|safe}}</p></div>
+          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":250"|safe}} . . . </p></p></div>
         </div>
 
       </div>
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="col-6 mid">
-            <div class="divintro"><p class="card-text">{{b1.Text|safe|mystrip|safe|myslice:":130"|safe}}</p></div>
+            <div class="divintro"><p class="card-text">{{b1.Text|safe|mystrip|safe|myslice:":130"|safe}} . . . </p></p></div>
           </div>
         </div>
       </div>
@@ -170,7 +170,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b1.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b1.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":130"|safe}}</p></div>
+          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":130"|safe}} . . . </p></p></div>
         </div>
 
       </div>
@@ -192,7 +192,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b1.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b1.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":250"|safe}}</p></div>
+          <div class="divintro"><p class="card-text"> {{b1.Text|safe|mystrip|safe|myslice:":250"|safe}} . . . </p></p></div>
         </div>
 
       </div>
@@ -219,7 +219,7 @@
             </div>
           </div>
           <div class="col-6 mid">
-            <div class="divintro"><p class="card-text">{{b1.Text|safe|mystrip|safe|myslice:":130"|safe}}</p></div>
+            <div class="divintro"><p class="card-text">{{b1.Text|safe|mystrip|safe|myslice:":130"|safe}} . . . </p></p></div>
           </div>
         </div>
       </div>
@@ -251,7 +251,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b2.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b2.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b2.Text|safe|mystrip|safe|myslice:":130"|safe}}</p></div>
+          <div class="divintro"><p class="card-text"> {{b2.Text|safe|mystrip|safe|myslice:":130"|safe}} . . . </p></p></div>
         </div>
 
       </div>
@@ -273,7 +273,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b2.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b2.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b2.Text|safe|mystrip|safe|myslice:":250"|safe}}</p></div>
+          <div class="divintro"><p class="card-text"> {{b2.Text|safe|mystrip|safe|myslice:":250"|safe}} . . . </p></p></div>
         </div>
 
       </div>
@@ -300,7 +300,7 @@
             </div>
           </div>
           <div class="col-6 mid">
-            <div class="divintro"><p class="card-text">{{b2.Text|safe|mystrip|safe|myslice:":130"|safe}}</p></div>
+            <div class="divintro"><p class="card-text">{{b2.Text|safe|mystrip|safe|myslice:":130"|safe}} . . . </p></p></div>
           </div>
         </div>
       </div>
