--- a/shab/web/static/css/style.css
+++ b/shab/web/static/css/style.css
@@ -226,3 +226,10 @@ line-height: 1.8 !important;
 .myreply {
     color: midnightblue;
 }
+
+.card-deck > .card
+{
+    width: 17%;
+    flex-wrap: wrap;
+    flex: initial;
+}
