--- a/shab/web/templates/index.html
+++ b/shab/web/templates/index.html
@@ -329,7 +329,7 @@
  </div>
 </div>
 -->
-<div class="card-columns" style="margin-left: 2% ; margin-right: 2%">
+<div class="card-deck" style="margin-left: 2% ; margin-right: 2%">
   {% for post in posts %}
 
   {% if post.Type == 'avatarbase' %}
