--- a/shab/web/static/css/style.css
+++ b/shab/web/static/css/style.css
@@ -112,7 +112,7 @@ line-height: 1.8 !important;
 .mycard{
   margin-top: 5%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-top: 3%;
+  margin-bottom: 3%;
 
 }
 
