margin top post fixed

--- a/shab/web/templates/post.html
+++ b/shab/web/templates/post.html
@@ -136,7 +136,7 @@
     <div class="col-2">
     </div>
     <div class="col-8">
-        <div class="card mycard">
+        <div class="card mycard" style="margin-top: 12%;">
             <div class="card-header">
                 {% if post.Category == 'LM' %}
                 لذت متن
