--- a/shab/web/templates/post23.html
+++ b/shab/web/templates/post23.html
@@ -218,7 +218,7 @@
                     </div>
                   <div class="card-body">
                       <div class="row">
-                          <div class="col-6"> <img class="img-fluid" src="/media/{{post.PostImage}}" style="border-radius: 5%;" ></div>
+                          <div class="col-6"> <img class="img-fluid" src="/media/{{relpost.related.PostImage}}" style="border-radius: 5%;" ></div>
                           <div class="col-6">{{relpost.related.SubTitle}}</div>
                       </div>
                   </div>
