--- a/shab/web/templates/post2.html
+++ b/shab/web/templates/post2.html
@@ -224,8 +224,13 @@
                     </div>
                   <div class="card-body">
                       <div class="row">
-                          <div class="col-6"> <img class="img-fluid" src="/media/{{relpost.related.PostImage}}" style="border-radius: 5%;" ></div>
-                          <div class="col-6">{{relpost.related.SubTitle}}</div>
+                                   {% if relpost.related.Avatar == 'avatarbase' %}
+                                     <div class="col-6"> <img class="img-fluid" src="/media/{{relpost.related.PostImage}}" style="border-radius: 5%;" ></div>
+                                    <div class="col-6">{{relpost.related.SubTitle}}</div>
+                                    {% else %}
+                                    <div class="col-6"> <img class="img-fluid" src="/media/{{relpost.related.PostImage}}" style="border-radius: 5%;" ></div>
+                                    <div class="col-6">{{relpost.related.SubTitle}}</div>
+                                    {% endif %}
                       </div>
                   </div>
                 </div>
